--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -13,6 +13,11 @@
         <button type="submit">ログイン</button>
     </form>
 
+    <!-- パスワードを忘れた場合のリンク -->
+    <!-- setting.pyの設定で実際にメールは送らず、ターミナルに表示される -->
+    <p><a href="{% url 'password_reset' %}">パスワードを忘れた場合はこちら</a></p>
+
+    <!-- 新規アカウント作成リンク -->
     <p><a href="{% url 'signup' %}">新規アカウント作成</a></p>
 </body>
 </html>
