--- a/templates/home.html
+++ b/templates/home.html
@@ -7,13 +7,15 @@
 <body>
     <h1>ようこそ Irokumo へ ✨</h1>
 
+    <!-- ログインしている場合 -->
     {% if user.is_authenticated %}
-        <p>{{ user.email }} でログイン中です</p>
+        <p>{{ user.profile.name|default:user.email }} でログイン中です</p>
         <a href="{% url 'mypage' %}">マイページ</a>
         <form method="post" action="{% url 'logout' %}">
             {% csrf_token %}
             <button type="submit">ログアウト</button>
         </form>
+    <!-- ログインしていない場合 -->
     {% else %}
         <a href="{% url 'signup' %}">アカウント作成</a><br>
         <a href="{% url 'login' %}">ログイン</a>
