--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <title>トップページ</title>
 </head>
 <body>
-    <h1>ようこそ Irokumo へ ✨</h1>
+    <h1>ようこそ waninaru へ</h1>
 
     <!-- ログインしている場合 -->
     {% if user.is_authenticated %}
