--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -19,5 +19,6 @@
         <a href="{% url 'signup' %}">アカウント作成</a><br>
         <a href="{% url 'login' %}">ログイン</a>
     {% endif %}
+    <p><a href="{% url 'user_list' %}">ユーザー一覧</a></p>
 </body>
 </html>
