--- a/accounts/templates/accounts/supporter_dashboard.html
+++ b/accounts/templates/accounts/supporter_dashboard.html
@@ -13,5 +13,7 @@
         {% csrf_token %}
         <button type="submit">ログアウト</button>
     </form>
+    <p><a href="{% url 'active_chat_rooms' %}">進行中のチャットルームの一覧</a></p>
+    <p><a href="{% url 'user_list' %}">ユーザー一覧</a></p>
 </body>
 </html>
