--- a/accounts/templates/accounts/creator_dashboard.html
+++ b/accounts/templates/accounts/creator_dashboard.html
@@ -13,7 +13,10 @@
         {% csrf_token %}
         <button type="submit">ログアウト</button>
     </form>
+
     <p><a href="{% url 'active_chat_rooms' %}">進行中のチャットルームの一覧</a></p>
     <p><a href="{% url 'user_list' %}">ユーザー一覧</a></p>
+    <!-- 通知リンク追加 -->
+    <p><a href="{% url 'scout_notifications' %}">スカウト通知を見る</a></p>
 </body>
 </html>
