自由入力に対するAIからの回答の生成

--- a/aidea/templates/aidea/design.html
+++ b/aidea/templates/aidea/design.html
@@ -10,6 +10,12 @@
 <body>
     <h1>工芸品デザイン</h1>
     <button id="generate-btn">注意点を生成</button>
+    
+    <button id="howto-btn">描き方を聞く</button>
+    
+    <input type="text"  id="free-input" placeholder="自由に質問を書いてください">
+    <button id="free-btn">送信</button>
+
     <div id="result"></div>
 </body>
 </html>
