--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>工芸品を選んでください</h1>
-    <img src = "{% static 'aidea/img/hellokitty.png' %}" alt="仮画像">
+    <img src = "{% static 'aidea/images/hellokitty.png' %}" alt="仮画像">
     <hr>
     <!--JavaScriptでページ遷移させる。選んだ工芸品の名前をURLパラメータとして渡す-->
     <button onclick="location.href='/aidea/design/?item=輪島塗のお椀'">輪島塗のお椀</button>
