推奨質問のボタンの追加

--- a/aidea/templates/aidea/design.html
+++ b/aidea/templates/aidea/design.html
@@ -27,7 +27,10 @@
         <li>熱や木の動きで塗りが割れやすいので、縁や底を避けて中央部分にデザインするのがおすすめです。</li>
     </ul>
     <!--推奨質問のボタン-->
-    <button class="suggest-btn" data-command="drawing_tips" data-item-name="{{ item_name }}">描き方のコツを聞く</button>
+    <button class="suggest-btn" data-command="famous_design" data-item-name="{{ item_name }}">代表的な模様やモチーフは？</button>
+    <button class="suggest-btn" data-command="easy_design" data-item-name="{{ item_name }}">初心者向けの簡単なデザイン案は？</button>
+    <button class="suggest-btn" data-command="drawing_tips" data-item-name="{{ item_name }}">描き方のコツは？</button>
+    <button class="suggest-btn" data-command="avoid_design" data-item-name="{{ item_name }}">デザインで避けるべきことは？</button>
     
     <!--チャット欄-->
     <div id="chat-box"></div>
