boostrap nav & add img

--- a/aidea/static/aidea/design.css
+++ b/aidea/static/aidea/design.css
@@ -38,3 +38,22 @@ body{
 img{
     width: 20%;
 }
+
+html, body{
+    height:100%;
+    width:100%;
+    padding:0%;
+    margin:0%;
+}
+
+.sidebar{
+    top:0;
+    left:-100%;
+    height:100%;
+    transition:all .35s ease;
+}
+
+.sidebar-toggle{
+    cursor: pointer;
+}
+
