--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -5,23 +5,67 @@
 <head>
     <meta charset="UTF-8">
     <title>工芸品選択</title>
-    <script src="{% static 'aidea/design.js' %}" defer></script>
+    <!-- <script src="{% static 'aidea/design.js' %}" defer></script> -->
     <!--boostrap CDN経由 .js-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="{% static 'aidea/design.css' %}">
     <!--boostrap CDN経由 .css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <div class="container">
+        <!--ブランドロゴ-->
+        <a class="navbar-brand" href="#">
+          <img src="{% static 'aidea/images/waninaru.png' %}" alt="Logo" width="30" height="30" class="me-2">
+          waninaru
+        </a>
+
+        <!--折り畳みボタン-->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- メニュー部分 -->
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav mb-2 mb-sm-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">ホーム画面</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">アイデアを作成する</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">マイフォルダ</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Link</a></li>
+                <li><a class="dropdown-item" href="#">Link</a></li>
+                <li><a class="dropdown-item" href="#">Link</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    </div>
+
+
     <div class="container-fluid">
-    <div class="row">
+    <!-- <div class="row">
         <button>
             <div class="area">
                 <img src="{% static 'aidea/images/hellokitty.png' %}" alt="仮画像" class="img-fluid w-50 h-50">
             </div>
         </button>
         <p class="col-3 py-3">アイデア作成</p>
-    </div>
+    </div> -->
     <h1 class="row justify-content-center my-5">工芸品を選んでください</h1>
     <!-- <img src = "{% static 'aidea/images/hellokitty.png' %}" alt="仮画像"  class="offset-4 col-4">
     <h2 class="row justify-content-center">輪島塗について</h2>
@@ -29,18 +73,18 @@
     <hr>
     <!--JavaScriptでページ遷移させる。選んだ工芸品の名前をURLパラメータとして渡す-->
     <div class = "row">
-        <div class="offset-2 col-3">     
+        <div class="offset-1 col-4 offset-md-2 col-md-3">     
             <button onclick="location.href='/aidea/design/?item=輪島塗のお椀'" class="my-3">
                 <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/hellokitty.png' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3" ></br>
+                    <img src="{% static 'aidea/images/wazima5.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img" ></br>
                     輪島塗のお椀
                 </div>
             </button>
         </div>
-        <div class="offset-2 col-3 area">
+        <div class="offset-2 col-4 offset-md-2 col-md-3">
             <button onclick="location.href='/aidea/design/?item=会津塗のお椀'" class="my-3">
                 <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/hellokitty.png' %}" alt="仮画像" class="w-50 h-50 pb-3"></br>
+                    <img src="{% static 'aidea/images/aidu3.jpg' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     会津塗のお椀
                 </div>
             </button>
@@ -48,23 +92,26 @@
     </div>
 
     <div class="row">
-        <div class="offset-2 col-3">
+        <div class="offset-1 col-4 offset-md-2 col-md-3">
             <button onclick="location.href='/aidea/design/?item=有田焼のお皿'" class="my-3">
                 <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/hellokitty.png' %}" alt="仮画像" class="w-50 h-50 pb-3"></br>
+                    <img src="{% static 'aidea/images/arita.webp' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     有田焼のお皿
                 </div>
             </button>
         </div>
-        <div class="offset-2 col-3">
+        <div class="offset-2 col-4 offset-md-2 col-md-3">
             <button onclick="location.href='/aidea/design/?item=九谷焼のお皿'" class="my-3">
                 <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/hellokitty.png' %}" alt="仮画像" class="w-50 h-50 pb-3"></br>
+                    <img src="{% static 'aidea/images/kutani2.webp' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     九谷焼のお皿
                 </div>
             </button>
         </div>
     </div>
     </div>
+    <script src="{% static 'aidea/design.js' %}" defer></script>
+    <!--boostrap CDN経由 .js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
