--- a/aidea/templates/aidea/design.html
+++ b/aidea/templates/aidea/design.html
@@ -63,6 +63,13 @@
         </div>
 
     <hr>
-    <h2>デザインの投稿</h2>
+    <h2>アイデアの投稿</h2>
+    <h3>デザインの画像ファイル</h3>
+    <input type="file" id="idea_upload_img" accept="image/*">
+    <br>
+    <h3>デザインの説明</h3>
+    <textarea id ="idea_upload_txt"></textarea>
+    <br>
+    <button id="idea_upload">アイデアを投稿する</button>
 </body>
 </html>
