--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -5,7 +5,6 @@
 <head>
     <meta charset="UTF-8">
     <title>工芸品選択</title>
-    <!-- <script src="{% static 'aidea/design.js' %}" defer></script> -->
     <!--boostrap CDN経由 .js-->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="{% static 'aidea/design.css' %}">
@@ -58,33 +57,25 @@
 
 
     <div class="container-fluid">
-    <!-- <div class="row">
-        <button>
-            <div class="area">
-                <img src="{% static 'aidea/images/hellokitty.png' %}" alt="仮画像" class="img-fluid w-50 h-50">
-            </div>
-        </button>
-        <p class="col-3 py-3">アイデア作成</p>
-    </div> -->
     <h1 class="row justify-content-center my-5">工芸品を選んでください</h1>
-    <!-- <img src = "{% static 'aidea/images/hellokitty.png' %}" alt="仮画像"  class="offset-4 col-4">
-    <h2 class="row justify-content-center">輪島塗について</h2>
-    <p class="row justify-content-center">輪島塗の説明</p> -->
+
+    <h1 class="row justify-content-center my-5"></h1>
     <hr>
     <!--JavaScriptでページ遷移させる。選んだ工芸品の名前をURLパラメータとして渡す-->
     <div class = "row">
-        <div class="offset-1 col-4 offset-md-2 col-md-3">     
-            <button onclick="location.href='/aidea/design/?item=輪島塗のお椀'" class="my-3">
-                <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/wazima5.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img" ></br>
-                    輪島塗のお椀
-                </div>
-            </button>
+        <div class="offset-1 col-4 offset-md-2 col-md-3">
+          <button class="my-3" onclick="showModal('輪島塗のお椀', '{% static "aidea/images/wazima5.jpg" %}', '下地に「地の粉（珪藻土）」を用いるため、やや厚みと重みがあり、立体的な彫りや沈金（金粉彫刻）を活かすデザインが映える。多層塗りによる深い艶が特徴なので、色数を抑えて漆の光沢や質感を主役にするデザインが◎。表面が硬く丈夫な反面、細かい模様を掘り込みすぎると割れやすいので、過度な細密彫刻は避ける。')">
+            <div class="area pt-3 pb-3">
+              <img src="{% static 'aidea/images/wazima5.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img" ></br>
+              輪島塗のお椀
+            </div>
+          </button>
         </div>
+
         <div class="offset-2 col-4 offset-md-2 col-md-3">
-            <button onclick="location.href='/aidea/design/?item=会津塗のお椀'" class="my-3">
+          <button class="my-3" onclick="showModal('会津塗のお椀', '{% static "aidea/images/aidu3.jpg" %}', '下地に「地の粉（珪藻土）」を用いるため、やや厚みと重みがあり、立体的な彫りや沈金（金粉彫刻）を活かすデザインが映える。多層塗りによる深い艶が特徴なので、色数を抑えて漆の光沢や質感を主役にするデザインが◎。表面が硬く丈夫な反面、細かい模様を掘り込みすぎると割れやすいので、過度な細密彫刻は避ける。')">
                 <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/aidu3.jpg' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
+                    <img src="{% static 'aidea/images/aidu3.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img"></br>
                     会津塗のお椀
                 </div>
             </button>
@@ -93,7 +84,7 @@
 
     <div class="row">
         <div class="offset-1 col-4 offset-md-2 col-md-3">
-            <button onclick="location.href='/aidea/design/?item=有田焼のお皿'" class="my-3">
+          <button class="my-3" onclick="showModal('有田焼のお皿', '{% static "aidea/images/arita.webp" %}', '下地に「地の粉（珪藻土）」を用いるため、やや厚みと重みがあり、立体的な彫りや沈金（金粉彫刻）を活かすデザインが映える。多層塗りによる深い艶が特徴なので、色数を抑えて漆の光沢や質感を主役にするデザインが◎。表面が硬く丈夫な反面、細かい模様を掘り込みすぎると割れやすいので、過度な細密彫刻は避ける。')">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/arita.webp' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     有田焼のお皿
@@ -101,7 +92,7 @@
             </button>
         </div>
         <div class="offset-2 col-4 offset-md-2 col-md-3">
-            <button onclick="location.href='/aidea/design/?item=九谷焼のお皿'" class="my-3">
+          <button class="my-3" onclick="showModal('九谷焼のお皿', '{% static "aidea/images/kutani2.webp" %}', '下地に「地の粉（珪藻土）」を用いるため、やや厚みと重みがあり、立体的な彫りや沈金（金粉彫刻）を活かすデザインが映える。多層塗りによる深い艶が特徴なので、色数を抑えて漆の光沢や質感を主役にするデザインが◎。表面が硬く丈夫な反面、細かい模様を掘り込みすぎると割れやすいので、過度な細密彫刻は避ける。')">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/kutani2.webp' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     九谷焼のお皿
@@ -110,8 +101,52 @@
         </div>
     </div>
     </div>
-    <script src="{% static 'aidea/design.js' %}" defer></script>
+
+    <!--モーダル-->
+  <div class="modal fade" id="craftModal" tabindex="-1" aria-labelledby="craftModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="craftModalLabel">工芸品について</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="閉じる"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row align-items-center">
+            <div class="col-md-5">
+                <img id="modalImage" src="" alt="工芸品画像" class="img-fluid h-100 w-100 rounded">
+            </div>
+            <div class="col-md-7 text-start">
+              <h4 id="modalTitle"></h4>
+              <p id="modalDescription" class="fs-5"></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
+          <button type="button" class="btn btn-primary" id="makeButton">この工芸品のデザイン作る</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <!--boostrap CDN経由 .js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+      <script>
+    const modal = new bootstrap.Modal(document.getElementById('craftModal'));
+    let currentItem = "";
+
+    function showModal(name, imgPath, description) {
+      document.getElementById('modalTitle').textContent = name;
+      document.getElementById('modalImage').src = imgPath;
+      document.getElementById('modalDescription').textContent = description;
+      currentItem = name;
+      modal.show();
+    }
+
+    document.getElementById('makeButton').addEventListener('click', () => {
+      location.href = `/aidea/design/?item=${encodeURIComponent(currentItem)}`;
+    });
+  </script>
 </body>
 </html>
