--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -66,7 +66,7 @@
     <div class = "row">
         <div class="offset-1 col-4 offset-md-2 col-md-3">
           <button class="my-3" onclick="showModal(
-            '輪島塗について', 
+            '輪島塗', 
             '{% static "aidea/images/wazima5.jpg" %}', 
             '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
             ['特徴１', '特徴２', '特徴３']
@@ -80,7 +80,7 @@
 
         <div class="offset-1 col-4 offset-md-2 col-md-3">
           <button class="my-3" onclick="showModal(
-            '会津塗のお椀について', 
+            '会津塗', 
             '{% static "aidea/images/aidu3.jpg" %}', 
             '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
             ['特徴１', '特徴２', '特徴３']
@@ -96,7 +96,7 @@
     <div class="row">
         <div class="offset-1 col-4 offset-md-2 col-md-3">
           <button class="my-3" onclick="showModal(
-            '有田焼のお皿について', 
+            '有田焼', 
             '{% static "aidea/images/arita.webp" %}', 
             '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
             ['特徴１', '特徴２', '特徴３']
@@ -109,7 +109,7 @@
         </div>
         <div class="offset-2 col-4 offset-md-2 col-md-3">
           <button class="my-3" onclick="showModal(
-            '九谷焼のお皿について', 
+            '九谷焼', 
             '{% static "aidea/images/kutani2.webp" %}', 
             '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
             ['特徴１', '特徴２', '特徴３']
