輪島塗の説明

--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -68,8 +68,8 @@
           <button class="my-3" onclick="showModal(
             '輪島塗', 
             '{% static "aidea/images/wazima5.jpg" %}', 
-            '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
-            ['特徴１', '特徴２', '特徴３']
+            '輪島塗は石川県輪島市で作られる漆器です。特徴は「木地を素地とする」「布着せを施す」「輪島でしか採れない地の粉を下地に使う」ことです。良質な地の粉により強度が高まり、美しい仕上がりになります。彫りに金を入れたり、金粉・銀粉を使った蒔絵など華やかな装飾も魅力です。100を超える工程を経て作られるため丈夫で、修復して長く使うこともできます。',
+            ['金粉や銀粉を使用した蒔絵などの華やかな表現', '布着せしている', '輪島市でのみ採れる輪島地の粉が下地である']
             )">
             <div class="area pt-3 pb-3">
               <img src="{% static 'aidea/images/wazima5.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img" ></br>
