--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -11,13 +11,15 @@
     <link rel="stylesheet" href="{% static 'aidea/design.css' %}">
     <!--boostrap CDN経由 .css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <!--アイコン css-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
         <!--ブランドロゴ-->
         <a class="navbar-brand" href="#">
-          <img src="{% static 'aidea/images/waninaru.png' %}" alt="Logo" width="30" height="30" class="me-2">
+          <img src="{% static 'aidea/images/waninaru.png' %}" alt="Logo" width="28" height="28" class="me-1 logo">
           waninaru
         </a>
 
@@ -29,7 +31,7 @@
 
         <!-- メニュー部分 -->
         <div class="collapse navbar-collapse" id="navbarContent">
-          <ul class="navbar-nav mb-2 mb-sm-0">
+          <ul class="navbar-nav mb-2 mb-sm-0 me-auto">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">ホーム画面</a>
             </li>
@@ -39,7 +41,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#">マイフォルダ</a>
             </li>
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Dropdown
@@ -49,6 +51,14 @@
                 <li><a class="dropdown-item" href="#">Link</a></li>
                 <li><a class="dropdown-item" href="#">Link</a></li>
               </ul>
+            </li> -->
+            </ul>
+            <ul class="navbar-nav mb-2 mb-sm-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">
+                <i class="bi bi-person-circle m-2"></i>
+                マイページ
+              </a>
             </li>
           </ul>
         </div>
@@ -66,7 +76,7 @@
         </button>
         <p class="col-3 py-3">アイデア作成</p>
     </div> -->
-    <h1 class="row justify-content-center my-5">工芸品を選んでください</h1>
+    <h1 class="row justify-content-center my-5">デザインしたい工芸品を選んでください</h1>
     <!-- <img src = "{% static 'aidea/images/hellokitty.png' %}" alt="仮画像"  class="offset-4 col-4">
     <h2 class="row justify-content-center">輪島塗について</h2>
     <p class="row justify-content-center">輪島塗の説明</p> -->
@@ -74,17 +84,17 @@
     <!--JavaScriptでページ遷移させる。選んだ工芸品の名前をURLパラメータとして渡す-->
     <div class = "row">
         <div class="offset-1 col-4 offset-md-2 col-md-3">     
-            <button onclick="location.href='/aidea/design/?item=輪島塗のお椀'" class="my-3">
+            <button onclick="location.href='/aidea/design/?item=輪島塗のお椀'" class="btn btn-outline-dark my-3">
                 <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/wazima5.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img" ></br>
+                    <img src="{% static 'aidea/images/wazima_sq4.avif' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img" ></br>
                     輪島塗のお椀
                 </div>
             </button>
         </div>
         <div class="offset-2 col-4 offset-md-2 col-md-3">
-            <button onclick="location.href='/aidea/design/?item=会津塗のお椀'" class="my-3">
+            <button onclick="location.href='/aidea/design/?item=会津塗のお椀'" class="btn btn-outline-dark my-3">
                 <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/aidu3.jpg' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
+                    <img src="{% static 'aidea/images/aidu_sq2.jpg' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     会津塗のお椀
                 </div>
             </button>
@@ -93,7 +103,7 @@
 
     <div class="row">
         <div class="offset-1 col-4 offset-md-2 col-md-3">
-            <button onclick="location.href='/aidea/design/?item=有田焼のお皿'" class="my-3">
+            <button onclick="location.href='/aidea/design/?item=有田焼のお皿'" class="btn btn-outline-dark my-3">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/arita.webp' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     有田焼のお皿
@@ -101,9 +111,9 @@
             </button>
         </div>
         <div class="offset-2 col-4 offset-md-2 col-md-3">
-            <button onclick="location.href='/aidea/design/?item=九谷焼のお皿'" class="my-3">
+            <button onclick="location.href='/aidea/design/?item=九谷焼のお皿'" class="btn btn-outline-dark my-3">
                 <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/kutani2.webp' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
+                    <img src="{% static 'aidea/images/kutani_sq1.jpg' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     九谷焼のお皿
                 </div>
             </button>
