--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -67,44 +67,14 @@
 
 
     <div class="container-fluid">
-<<<<<<< HEAD
-    <!-- <div class="row">
-        <button>
-            <div class="area">
-                <img src="{% static 'aidea/images/hellokitty.png' %}" alt="仮画像" class="img-fluid w-50 h-50">
-            </div>
-        </button>
-        <p class="col-3 py-3">アイデア作成</p>
-    </div> -->
     <h1 class="row justify-content-center my-5">デザインしたい工芸品を選んでください</h1>
-    <!-- <img src = "{% static 'aidea/images/hellokitty.png' %}" alt="仮画像"  class="offset-4 col-4">
-    <h2 class="row justify-content-center">輪島塗について</h2>
-    <p class="row justify-content-center">輪島塗の説明</p> -->
-=======
-    <h1 class="row justify-content-center my-5">工芸品を選んでください</h1>
 
-    <h1 class="row justify-content-center my-5"></h1>
->>>>>>> origin/yuta
     <hr>
     <!--JavaScriptでページ遷移させる。選んだ工芸品の名前をURLパラメータとして渡す-->
     <!--以下、赤くなっているところがありますが、VSCodeがDjangoの構文をJavaScriptだと思って解析しているためです。エラーではありません。-->
     <div class = "row">
-<<<<<<< HEAD
-        <div class="offset-1 col-4 offset-md-2 col-md-3">     
-            <button onclick="location.href='/aidea/design/?item=輪島塗のお椀'" class="btn btn-outline-dark my-3">
-                <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/wazima_sq4.avif' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img" ></br>
-                    輪島塗のお椀
-                </div>
-            </button>
-        </div>
-        <div class="offset-2 col-4 offset-md-2 col-md-3">
-            <button onclick="location.href='/aidea/design/?item=会津塗のお椀'" class="btn btn-outline-dark my-3">
-                <div class="area pt-3 pb-3">
-                    <img src="{% static 'aidea/images/aidu_sq2.jpg' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
-=======
         <div class="offset-1 col-4 offset-md-2 col-md-3">
-          <button class="my-3" onclick="showModal(
+          <button class="btn btn-outline-dark my-3" onclick="showModal(
             '輪島塗', 
             '{% static "aidea/images/wazima5.jpg" %}', 
             '輪島塗は石川県輪島市で作られる漆器です。特徴は「木地を素地とする」「布着せを施す」「輪島でしか採れない地の粉を下地に使う」ことです。良質な地の粉により強度が高まり、美しい仕上がりになります。彫りに金を入れたり、金粉・銀粉を使った蒔絵など華やかな装飾も魅力です。100を超える工程を経て作られるため丈夫で、修復して長く使うこともできます。',
@@ -118,7 +88,7 @@
         </div>
 
         <div class="offset-1 col-4 offset-md-2 col-md-3">
-          <button class="my-3" onclick="showModal(
+          <button class="btn btn-outline-dark my-3" onclick="showModal(
             '会津塗', 
             '{% static "aidea/images/aidu3.jpg" %}', 
             '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
@@ -126,7 +96,6 @@
             )">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/aidu3.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img"></br>
->>>>>>> origin/yuta
                     会津塗のお椀
                 </div>
             </button>
@@ -135,16 +104,12 @@
 
     <div class="row">
         <div class="offset-1 col-4 offset-md-2 col-md-3">
-<<<<<<< HEAD
-            <button onclick="location.href='/aidea/design/?item=有田焼のお皿'" class="btn btn-outline-dark my-3">
-=======
-          <button class="my-3" onclick="showModal(
+          <button class="btn btn-outline-dark my-3" onclick="showModal(
             '有田焼', 
             '{% static "aidea/images/arita.webp" %}', 
             '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
             ['特徴１', '特徴２', '特徴３']
             )">
->>>>>>> origin/yuta
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/arita.webp' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     有田焼のお皿
@@ -152,16 +117,14 @@
             </button>
         </div>
         <div class="offset-2 col-4 offset-md-2 col-md-3">
-<<<<<<< HEAD
-            <button onclick="location.href='/aidea/design/?item=九谷焼のお皿'" class="btn btn-outline-dark my-3">
-=======
-          <button class="my-3" onclick="showModal(
+
+          <button class="btn btn-outline-dark my-3
+          " onclick="showModal(
             '九谷焼', 
             '{% static "aidea/images/kutani2.webp" %}', 
             '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
             ['特徴１', '特徴２', '特徴３']
             )">
->>>>>>> origin/yuta
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/kutani_sq1.jpg' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
                     九谷焼のお皿
@@ -197,7 +160,7 @@
 
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
-          <button type="button" class="btn btn-primary" id="makeButton">この工芸品のデザイン作る</button>
+          <button type="button" class="btn btn-danger" id="makeButton">この工芸品のデザイン作る</button>
         </div>
       </div>
     </div>
