--- a/aidea/templates/aidea/design.html
+++ b/aidea/templates/aidea/design.html
@@ -72,7 +72,7 @@
 
     <div class="row">
         <div class="offset-4 col-4">
-            <button id="get-feedback-btn" class="m-2 btn btn-danger">フィードバックをもらう</button>
+            <button id="get-feedback-btn" class="m-2 btn btn-outline-danger">フィードバックをもらう</button>
         </div>
     </div>
     
@@ -83,18 +83,20 @@
         </div>
 
     <hr>
-<<<<<<< HEAD
-    <h2>デザインの投稿</h2>
-    </div>
-=======
-    <h2>アイデアの投稿</h2>
+    <h2 class="row justify-content-center my-5">アイデアの投稿</h2>
+    <div class="row">
+    <div class="offset-1 col-5">
     <h3>デザインの画像ファイル</h3>
     <input type="file" id="idea_upload_img" accept="image/*">
     <br>
-    <h3>デザインの説明</h3>
+    </div>
+    <div class="col-6">
+    <h3>デザインの説明</h3><br>
     <textarea id ="idea_upload_txt"></textarea>
+    </div>
+    </div>
     <br>
-    <button id="idea_upload">アイデアを投稿する</button>
->>>>>>> origin/yuta
+    <button id="idea_upload" class="offset-3 col-6 py-1 my-3 btn btn-danger">アイデアを投稿する</button>
+
 </body>
 </html>
