デザインの修正

--- a/aidea/templates/aidea/design.html
+++ b/aidea/templates/aidea/design.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="row">
-        <div class="offset-4 col-4">
+        <div class="offset-4 col-4 text-center">
             <button id="get-feedback-btn" class="m-2 btn btn-outline-danger">フィードバックをもらう</button>
         </div>
     </div>
