--- a/aidea/templates/aidea/design.html
+++ b/aidea/templates/aidea/design.html
@@ -10,11 +10,64 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'aidea/design.css' %}">
     <link rel="stylesheet" href="{% static 'aidea/design.css' %}">
+    <!--アイコン css-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--boostrap CDN経由 .css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <div class="container">
+        <!--ブランドロゴ-->
+        <a class="navbar-brand" href="#">
+          <img src="{% static 'aidea/images/waninaru.png' %}" alt="Logo" width="28" height="28" class="me-1 logo">
+          waninaru
+        </a>
+
+        <!--折り畳みボタン-->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- メニュー部分 -->
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav mb-2 mb-sm-0 me-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">ホーム画面</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">アイデアを作成する</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">マイフォルダ</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Link</a></li>
+                <li><a class="dropdown-item" href="#">Link</a></li>
+                <li><a class="dropdown-item" href="#">Link</a></li>
+              </ul>
+            </li> -->
+            </ul>
+            <ul class="navbar-nav mb-2 mb-sm-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">
+                <i class="bi bi-person-circle m-2"></i>
+                マイページ
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
     <div class="container-fluid">
     <h1 class="row justify-content-center my-5">{{item_name}}のデザインを作る</h1>
     <hr>
