輪島塗　特徴変更

--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -78,7 +78,7 @@
             '輪島塗', 
             '{% static "aidea/images/wazima5.jpg" %}', 
             '輪島塗は石川県輪島市で作られる漆器です。特徴は「木地を素地とする」「布着せを施す」「輪島でしか採れない地の粉を下地に使う」ことです。良質な地の粉により強度が高まり、美しい仕上がりになります。彫りに金を入れたり、金粉・銀粉を使った蒔絵など華やかな装飾も魅力です。100を超える工程を経て作られるため丈夫で、修復して長く使うこともできます。',
-            ['金粉や銀粉を使用した蒔絵などの華やかな表現', '布着せしている', '輪島市でのみ採れる輪島地の粉が下地である']
+            ['石川県輪島市で作られる漆器', '金粉や銀粉を使用した蒔絵などの華やかな表現', '修復して長く使用できる']
             )">
             <div class="area pt-3 pb-3">
               <img src="{% static 'aidea/images/wazima5.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img" ></br>
