モーダルの閉じるを押すと最初の画面に戻るようにした

--- a/aidea/templates/aidea/design.html
+++ b/aidea/templates/aidea/design.html
@@ -175,7 +175,8 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                        onclick="window.location.href='{% url 'index' %}'">閉じる</button>
                     </div>
                 </div>
             </div>
