会津塗と有田焼の説明・特徴入力

--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -77,7 +77,7 @@
           <button class="btn btn-outline-dark my-3" onclick="showModal(
             '輪島塗', 
             '{% static "aidea/images/wazima5.jpg" %}', 
-            '輪島塗は石川県輪島市で作られる漆器です。特徴は「木地を素地とする」「布着せを施す」「輪島でしか採れない地の粉を下地に使う」ことです。良質な地の粉により強度が高まり、美しい仕上がりになります。彫りに金を入れたり、金粉・銀粉を使った蒔絵など華やかな装飾も魅力です。100を超える工程を経て作られるため丈夫で、修復して長く使うこともできます。',
+            '輪島塗は、石川県輪島市で作られる漆器です。特徴は「木地を素地とする」「布着せを施す」「輪島でしか採れない地の粉を下地に使う」ことです。良質な地の粉により強度が高まり、美しい仕上がりになります。彫りに金を入れたり、金粉・銀粉を使った蒔絵など華やかな装飾も魅力です。100を超える工程を経て作られるため丈夫で、修復して長く使うこともできます。',
             ['石川県輪島市で作られる漆器', '金粉や銀粉を使用した蒔絵などの華やかな表現', '修復して長く使用できる']
             )">
             <div class="area pt-3 pb-3">
@@ -91,8 +91,8 @@
           <button class="btn btn-outline-dark my-3" onclick="showModal(
             '会津塗', 
             '{% static "aidea/images/aidu3.jpg" %}', 
-            '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
-            ['特徴１', '特徴２', '特徴３']
+            '会津塗は、福島県の西部に位置する会津地方に江戸時代から伝わる伝統技法で作られた工芸品です。特徴として、縁起のいい意匠や多彩な加飾の美しさが挙げられます。他の漆器に比べて、浅く細い溝を掘るため装飾は柔らかな表情を感じさせます。',
+            ['会津地方に江戸時代から伝わる工芸品', '縁起のいい意匠や多彩な加飾の美しさ', '浅く細い溝を掘るため装飾は柔らかな表情が感じられる']
             )">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/aidu3.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img"></br>
@@ -107,8 +107,8 @@
           <button class="btn btn-outline-dark my-3" onclick="showModal(
             '有田焼', 
             '{% static "aidea/images/arita.webp" %}', 
-            '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
-            ['特徴１', '特徴２', '特徴３']
+            '有田焼は、佐賀県有田町とその周辺地域で17世紀に日本で初めて作られた磁器です。特徴は、透き通るように白い滋肌と呉須で描いた染付け、ガラス質の上絵具を用いた華やかな赤絵です。耐久性が高く、美術品から日用品まで様々なものが生産されています。',
+            ['佐賀県有田町とその周辺地域で日本で初めて作られた磁器', '耐久性が高い', '美術品から日用品まで生産']
             )">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/arita.webp' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
