会津塗と有田焼の説明・特徴入力

--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -122,8 +122,8 @@
           " onclick="showModal(
             '九谷焼', 
             '{% static "aidea/images/kutani2.webp" %}', 
-            '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
-            ['特徴１', '特徴２', '特徴３']
+            '九谷焼は、石川県南部で作られている陶磁器です。山水、花鳥など絵画的で大胆な「上絵付け」による装飾が美しく、皿や茶碗のほか装飾品としても広く愛されています。九谷焼は、伝統を礎に時代の流れを汲みながら、現代においても進化し続けています',
+            ['石川県南部で作られている陶磁器', '絵画的で大胆な「上絵付け」による装飾が美しい', '現代においても進化し続けている']
             )">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/kutani_sq1.jpg' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
